# HoneyPot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  codecov.yml  config.example.toml  release-please-config.json
.github/workflows/: ci.yaml  docs.yaml  release.yaml
.zed/: settings.json
config/: config.example.toml
docker/: Dockerfile  compose.yaml
src/: config.rs  discord.rs  error.rs  i18n.rs  main.rs  settings.rs
src/discord/: ban.rs  commands.rs  handler.rs  interaction.rs  preview.rs
src/discord/commands/: doctor.rs  help.rs  ping.rs  version.rs  whois.rs
