[package]
name = "honeypot"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/m1sk9/HoneyPot"
readme = "README.md"
description = "A Discord bot that automatically bans spam bots via honeypot roles and channels."

[dependencies]
serenity = { version = "0.12.5", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
thiserror = "2.0.18"
